# exima-scraper-cli

./: README.md  pyproject.toml
scraper/: api.py  definitions.py  main.py
scrapper/: main.py  parser_rostender.py
tests/: test.html  test_parser.py
