[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tender-scraper"
version = "0.1.0"
description = "CLI tool to scrape tenders from rostender.info"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "beautifulsoup4",
    "lxml",
    "click",
    "uvicorn",
    "fastapi"
]

[project.scripts]
tender-scraper = "scraper:main"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "respx"]